# GOIDA_ALLIANCE_CASE

./: .gitignore  README.md  requirements.txt
admin-panel/: CMakeLists.txt  main.cpp
backend/: Dockerfile  auth_routes.py  backend_routes.py  database.py  deps.py  docker-compose.yml  main.py  models.py  requirements.txt  utils.py
backend/db/: database.py  init_db.py
backend/nginx/: nginx.conf
backend/src/: Dockerfile  main.py
backend/src/db/: database.py  models.py
backend/src/routers/: auth_routes.py  backend_routes.py
backend/src/services/: database_service.py
backend/streaming/: streaming_routes.py
docs/: hack_ujin_2026_openapi.yaml  qtkal.yaml
frontend/: CMakeLists.txt  main.cpp  main.py
frontend/api/: ApiObject.h  Block.cpp  Block.h  Emergency.cpp  Emergency.h  Event.h
qt-api/api/: Block.cpp  Emergency.cpp  Event.cpp  Event.h
